moved a section downwards & fixed horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -2006,3 +2006,7 @@ h1, h2, h3, h4, h5,
     font-size: 13px;
   }
 }
+
+body, html{
+  overflow-x: hidden;
+}
